@@ -7,15 +7,15 @@ $ext_lang = array(
     'extension_credits_link' => 'https://laut.fm/?from=oOP-Extension',
 
     //Topnavbar Linktitel
-    'trackhistory_navbar_title' => 'titoli giocati',
+    'trackhistory_navbar_title' => 'Titoli giocati',
     'stationinfo_navbar_title' => ' Su &#39;',
     'sendeplan_navbar_title' => 'Programma settimanale ',
     'playwith_navbar_title' => 'Cambia giocatore',
 
     //trackhistory modal
-    'trackhistory_modal_title' => 'Titelhistorie',
-    'current_song' => 'Aktuell läuft:',
-    'last_songs' => 'Davor lief:',
+    'trackhistory_modal_title' => 'Titoli giocati',
+    'current_song' => 'Attualmente in esecuzione:',
+    'last_songs' => 'Prima di allora:',
 
     //sendeplan modal
     'sendeplan_modal_title' => 'Programma settimanale',
@@ -52,6 +52,20 @@ $ext_lang = array(
     'playwith_modal_cast_bottomnote1' => '** Google Cast non è disponibile su tutti i dispositivi o software.Gli utenti Linux, Mac e Windows hanno bisogno di un browser Chrome o basato su Chrome, come Microsoft Edge, Opera, Brave o Vivaldi. Gli utenti di MacOS potrebbero anche dover utilizzare l&#39;applicazione ufficiale di Chromecast. Gli utenti Android e iOS potrebbero aver bisogno dell&#39;applicazione Google Home. I requisiti di sistema completi per GoogleCast sono disponibili ',
     'playwith_modal_cast_bottomnote_linktitle' => 'qui',
     
+    //net error modal
+    'neterr_modal_title' => 'Errore di riproduzione',
+    'neterr_desc_net_thinking' => 'Qualcosa non va. Analisi dei dati!',
+    'neterr_desc_net_okay1' => '&lt;b&gt;✔ Connessione senza problemi&lt;/b&gt;&lt;hr&gt; Tutti i server necessari per la riproduzione sono raggiungibili. &lt;hr&gt;&lt;i&gt;Questo potrebbe significare che la tua connessione è stata temporaneamente interrotta, ed è per questo che vedi questa finestra. La riproduzione funziona di nuovo? Per assicurarti che ',
+    'neterr_desc_net_okay2' => ' stia trasmettendo, puoi anche controllare la loro presenza su Laut.fm',
+    'neterr_desc_net_okay3' => 'Verifica',
+    'neterr_console_net_okay' => '✔ Connessione senza problemi.',
+    'neterr_desc_net_laut_not_okay1' => '&lt;b&gt;Problema parziale di connessione a internet&lt;/b&gt;&lt;hr&gt; Non possiamo raggiungere il server laut.fm della tua stazione. Potrebbe essere che pochi o nessun contenuto di laut.fm possa essere caricato.',
+    'neterr_desc_net_laut_not_okay2' => '',
+    'neterr_console_net_laut_not_okay' => '⚠ Errore di connessione durante il recupero del flusso da Laut.fm',
+    'neterr_desc_net_not_okay1' => '&lt;b&gt;Nessuna connessione a internet&lt;/b&gt;&lt;hr&gt;Tutte le connessioni a internet sono state interrotte. Questo ha causato l&#39;interruzione della riproduzione. È improbabile ma possibile che la riproduzione possa riprendere senza ricaricare il lettore. &lt;br&gt;&lt;br&gt; Su dispositivi mobili, questo errore può verificarsi a causa di un cambio di rete (ad esempio, da Wi-Fi a dati mobili). Anche in questo caso, solitamente aiuta ricaricare semplicemente la pagina.',
+    'neterr_desc_net_not_okay2' => '',
+    'neterr_console_net_not_okay' => 'Errore nel recupero dello stato del server: ',
+
 );
 
 ?>
