@@ -3,7 +3,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="neterror-containerLabel">Wiedergabe unterbrochen!</h5>
+        <h5 class="modal-title" id="neterror-containerLabel"><?php echo $ext_lang['neterr_modal_title']; ?></h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="fa fa-times"></i></button>
       </div>
       <div class="modal-body">
@@ -14,7 +14,7 @@
           <li>Du hast einen ungültigen Sernder angefragt. Also einen, den es nicht gibt.</li>
           <li>Der Anbieter des Audiostreams laut.fm hat derzeit Probleme mit seiner Technik. Wenn du keine Titelinformationen siehst, kann er auch schwierigkeiten haben, deine Anfrage zu verarbeiten. Wir versuchen die Stream-URL unten in diesem Fenster anzuklingeln. Schaue dir das Ergebnis an.</li> 
 </ul><hr>-->
-<div id="neterrornotifier"> Eine Skeunde, wir versuchen zu erfahren, was schief gelaufen ist ...
+<div id="neterrornotifier"> <?php echo $ext_lang['neterr_desc_net_thinking']; ?>
   <script>
   // Funktion, die den Serverstatus abruft und anzeigt
 function checkServerStatus() {
@@ -23,17 +23,17 @@ function checkServerStatus() {
     .then(data => {
       const netErrorNotifier = document.getElementById('neterrornotifier');
       if (data.running) {
-        netErrorNotifier.innerHTML = '<div class="alert alert-success" role="alert"><b>Verbindung zum Internet und laut.fm fehlerfrei</b><hr>laut.fm läuft im regulären Betrieb. Das heißt, dass deine Internetverbindung aktiv ist und laut.fm aufgerufen werden kann. <hr><i>Das kann nur bedeuten, dass der Sender den du aufrufen möchtest, nicht existiert. Überprüfe auf laut.fm, ob die Station <kbd><?php echo $lfmstream; ?></kbd> wirklich existiert und korrigiere wenn nötig die URL.</i><hr><a class="btn btn-success" target="_blank" href="https://laut.fm/<?php echo $lfmstream; ?>">Überprüfen</a></div>';
-        console.log('laut.fm läuft im regulären Betrieb');
+        netErrorNotifier.innerHTML = '<div class="alert alert-success" role="alert"><?php echo $ext_lang['neterr_desc_net_okay1']; ?> <kbd><?php echo $lfmstream; ?></kbd> <?php echo $ext_lang['neterr_desc_net_okay2']; ?> <a class="btn btn-link" target="_blank" href="https://laut.fm/<?php echo $lfmstream; ?>"><?php echo $ext_lang['neterr_desc_net_okay3']; ?></a></div>';
+        console.log('<?php echo $ext_lang['neterr_console_net_okay']; ?>');
       } else {
-        netErrorNotifier.innerHTML = '<div class="alert alert-danger" role="alert"><b>Verbindung zum Internet und laut.fm fehlerhaft</b><hr>laut.fm hat derzeit Probleme. Es kann also sein, dass alle oder einige Inhalte von laut.fm nicht geladen werden können. Daran kann dieser Player nichts ändern. Du musst dich in Geduld üben, bis laut.fm wieder funktioniert.</div>';
-        console.log('laut.fm hat derzeit Probleme');
+        netErrorNotifier.innerHTML = '<div class="alert alert-danger" role="alert"><?php echo $ext_lang['neterr_desc_net_laut_not_okay1']; ?></div>';
+        console.log('<?php echo $ext_lang['neterr_console_net_laut_not_okay']; ?>');
       }
     })
     .catch(error => {
       const netErrorNotifier = document.getElementById('neterrornotifier');
-      netErrorNotifier.innerHTML = '<div class="alert alert-warning" role="alert"><b>Verbindung zum Internet und laut.fm fehlerhaft</b><hr>Fehler beim Abrufen des Serverstatus von laut.fm. Entweder gibt es bei laut.fm gravierende Serverfehler oder die Verbindung zum Server wurde unterbrochen/unterbunden oder kann durch andere Störungen nicht aufgebaut werden. Du solltest deine Internetverbindung überprüfen. <br><br> Auf Mobilgeräten kann dieser Fehler durch einen Netzwerkwechsel (zum Beispiel von WLAN auf Mobile-Daten) auftreten. In diesem Fall hilft es jedoch bestimmt, die Seite einfach neu zu laden.</div>';
-      console.error('Fehler beim Abrufen des Serverstatus:', error);
+      netErrorNotifier.innerHTML = '<div class="alert alert-warning" role="alert"><?php echo $ext_lang['neterr_desc_net_not_okay1']; ?><?php echo $ext_lang['neterr_desc_net_not_okay2']; ?></div>';
+      console.error('<?php echo $ext_lang['neterr_console_net_not_okay']; ?>', error);
     });
 }
 
