@@ -1,5 +1,6 @@
 0.0.1.7 Gardenia
--	WIP
+-	Language manager implemented. This already has an influence on the main interface and the sound extension. The overrides for the large error messages when the player crashes are still missing. Here, communication is still in German. The Baseaudio extension is currently not usable. It is currently missing important translation files, which is why it cannot be used properly at all. The user interface selects the displayed language based on the URL parameter “hl”. If this parameter is not found in the URL, an automatic attempt is made to use the language used by your browser. If we do not offer the user interface in this language, the page will be displayed in English. The languages currently available for the above-mentioned areas are German, English and basic Italian.
+-   Laut extension: The placeholder covers for Laut.fm are no longer in use. If no Laut.de cover can be loaded, the station logo is now shown instead. If the station is LIVE, the station logo is currently always displayed. The reason for this is that the information “Station is live” will soon be moved to the menu bar instead of being displayed on the cover. Until then, this leads to the unfortunate situation that it is currently not possible to recognize whether a station is live or not.
 
 0.0.1.6 Freesia
 - The layout of the window about oOPlay has been adjusted.
